--- a/client/templates/chat.html
+++ b/client/templates/chat.html
@@ -1,13 +1,13 @@
-<ion-view title="{{ chat.data.name }}">
+<ion-view title="{{ chat.data | chatName }}">
 	<ion-nav-buttons side="right">
 		<button class="button button-clear">
-			<img class="header-picture" ng-src="{{ chat.data.picture }}">
+			<img class="header-picture" ng-src="{{ chat.data | chatPicture }}">
 		</button>
 	</ion-nav-buttons>
 	<ion-content class="chat" delegate-handle="chatScroll">
 		<div class="message-list">
 			<div ng-repeat="message in chat.messages" class="message-wrapper">
-				<div class="message" ng-class-even="'message-mine'" ng-class-odd="'message-other'">
+				<div class="message" ng-class="message.userId === $root.currentUser._id ? 'message-mine' : 'message-other'">
 					<div class="message-text">{{ message.text }}</div>
 					<span class="message-timestamp">{{ message.timestamp | amDateFormat: 'HH:mm' }}</span>
 				</div>
