--- a/client/templates/chats.html
+++ b/client/templates/chats.html
@@ -1,9 +1,13 @@
 <ion-view view-title="Chats">
+	<ion-nav-buttons side="right">
+		<button ng-click="chats.showNewChatModal()" class="button button-clear button-positive button-icon ion-ios-compose-outline"></button>
+	</ion-nav-buttons>
+	
 	<ion-content>
 		<ion-list>
 			<ion-item ng-repeat="chat in chats.data | orderBy:'-lastMessage.timestamp'" class="item-chat item-remove-animate item-avatar item-icon-right" type="item-text-wrap" href="#!/tab/chats/{{ chat._id }}">
-				<img ng-src="{{ chat.picture }}">
-				<h2>{{ chat.name }}</h2>
+				<img ng-src="{{ chat | chatPicture }}">
+				<h2>{{ chat | chatName }}</h2>
 				<p>{{ chat.lastMessage.text }}</p>
 				<span class="last-message-timestamp">{{ chat.lastMessage.timestamp | calendar }}</span>
 				<i class="icon ion-chevron-right icon-accessory"></i>
