--- a/client/templates/settings.html
+++ b/client/templates/settings.html
@@ -1,11 +1,15 @@
 <ion-view view-title="Settings">
+	<ion-header-bar>
+		<h1 class="title">Settings</h1>
+	</ion-header-bar>
 	<ion-nav-buttons side="right">
 		<a href="#!/tab/chats" class="button button-clear button-positive">Home</a>
 	</ion-nav-buttons>
 
-	<ion-content>
+	<ion-content class="settings">
+		<div class="padding-top" id="profile-padding"></div>
 		<ion-list>
-			<ion-item href="#!/profile" class="item-icon-right">
+			<ion-item href="#!/profile" class="padding-top item-icon-right">
 				Profile
 				<i class="icon ion-chevron-right icon-accessory"></i>
 			</ion-item>
