--- a/client/styles/profile.scss
+++ b/client/styles/profile.scss
@@ -41,4 +41,9 @@
 	.profile-name {
 		margin-top: 20px;
 	}
+
+	#profile-pic-box, div.camera-popup, div.camera-viewfinder {
+		max-width: 100%;
+		max-height: 100%;
+	}
 }
