--- a/client/templates/settings.html
+++ b/client/templates/settings.html
@@ -7,9 +7,8 @@
 	</ion-nav-buttons>
 
 	<ion-content class="settings">
-		<div class="padding-top" id="profile-padding"></div>
 		<ion-list>
-			<ion-item href="#!/profile" class="padding-top item-icon-right">
+			<ion-item href="#!/profile" class="item-icon-right">
 				Profile
 				<i class="icon ion-chevron-right icon-accessory"></i>
 			</ion-item>
