--- a/client/templates/contacts.html
+++ b/client/templates/contacts.html
@@ -2,6 +2,9 @@
 	<ion-header-bar>
 		<h1 class="title">Contacts</h1>
 	</ion-header-bar>
+	<ion-nav-buttons side="right">
+		<a href="#!/tab/chats" class="button button-clear button-positive button-icon ion-ios-home-outline" title="Home"></a>
+	</ion-nav-buttons>
 
 	<ion-content>
 		<ion-list>
