--- a/client/styles/chat.scss
+++ b/client/styles/chat.scss
@@ -47,6 +47,13 @@
 		background-color: #fff;
 	}
 
+	#broadcast_msg {
+		background-color: rgb(252, 183, 183);
+		text-align: center;
+		border-radius: 7px 7px 0px 0px;
+		box-shadow: inset 0 2px 2px rgba(0, 0, 0, 0.2);
+	}
+
 	&.message-other::before,
 	&.message-mine::before {
 		content: "";
