--- a/client/templates/chats.html
+++ b/client/templates/chats.html
@@ -1,15 +1,17 @@
 <ion-view view-title="Chats">
 	<ion-nav-buttons side="right">
-		<button ng-click="chats.showNewChatModal()" class="button button-clear button-positive button-icon ion-ios-compose-outline"></button>
+		<button ng-click="chats.showNewChatModal()" class="button button-clear button-positive button-icon ion-ios-compose-outline" title="New Chat"></button>
+		<a href="#!/profile" class="button button-clear button-positive button-icon ion-ios-contact-outline" title="Profile"></a>
 	</ion-nav-buttons>
-	
+
 	<ion-content>
 		<ion-list>
 			<ion-item ng-repeat="chat in chats.data | orderBy:'-lastMessage.timestamp'" class="item-chat item-remove-animate item-avatar item-icon-right" type="item-text-wrap" href="#!/tab/chats/{{ chat._id }}">
 				<img ng-src="{{ chat | chatPicture }}">
 				<h2>{{ chat | chatName }}</h2>
 				<ng-switch on="chat.lastMessage.type">
-					<p ng-switch-when="text">{{ chat.lastMessage.text }}</p>
+					<p ng-if="chat.lastMessage.broadcast" ng-switch-when="text"><strong>{{ chat.lastMessage.text }}</strong></p>
+					<p ng-if="!chat.lastMessage.broadcast" ng-switch-when="text">{{ chat.lastMessage.text }}</p>
 					<p ng-switch-when="picture">image</p>
 				</ng-switch>
 				<span class="last-message-timestamp">{{ chat.lastMessage.timestamp | calendar }}</span>
