--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -1,9 +1,9 @@
-<ion-view title="Profile">
+<ion-view view-title="Profile">
 	<ion-nav-buttons side="left">
-		<a href="#!/tab/settings" class="button button-clear button-positive">&lt; Go Back</a>
+		<a href="#!/tab/settings" class="button button-clear button-positive button-icon ion-ios-arrow-back" title="Go Back"></a>
 	</ion-nav-buttons>
 	<ion-nav-buttons side="right">
-		<a href="#!/tab/chats" class="button button-clear button-positive">Home</a>
+		<a href="#!/tab/chats" class="button button-clear button-positive button-icon ion-ios-home-outline" title="Home"></a>
 	</ion-nav-buttons>
 
 	<ion-content class="profile">
