--- a/client/templates/settings.html
+++ b/client/templates/settings.html
@@ -3,7 +3,7 @@
 		<h1 class="title">Settings</h1>
 	</ion-header-bar>
 	<ion-nav-buttons side="right">
-		<a href="#!/tab/chats" class="button button-clear button-positive">Home</a>
+		<a href="#!/tab/chats" class="button button-clear button-positive button-icon ion-ios-home-outline" title="Home"></a>
 	</ion-nav-buttons>
 
 	<ion-content class="settings">
