fix chat bg image (darker)

--- a/client/styles/chat.scss
+++ b/client/styles/chat.scss
@@ -7,7 +7,7 @@
 }
 
 .chat {
-	background-image: url(/bg-Red.jpg);
+	background-image: url(/bg-MidnightBlue.jpg);
 	background-color: #e0dad6;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
